Fixed overflow.

--- a/src/app/components/Navbar/style.css
+++ b/src/app/components/Navbar/style.css
@@ -9,6 +9,7 @@
   & ul {
     display: flex;
     gap: var(--gap);
+    flex-wrap: wrap;
     font-size: clamp(1em, 5vw, 1.5em);
 
     & a {
